--- a/Group_2/references.bib
+++ b/Group_2/references.bib
@@ -22,3 +22,16 @@
  Title = {Chord: A scalable peer-to-peer lookup service for internet applications},
  Year = {2001}}
 
+ @article{kotthoff,
+     author = {Kotthoff, Lars},
+     title = {Reliability of computational experiments on virtualised hardware},
+     journal = {Journal of Experimental \& Theoretical Artificial Intelligence},
+     volume = {26},
+     number = {1},
+     pages = {33-49},
+     year = {2014},
+     doi = {10.1080/0952813X.2013.784812},
+     URL = {http://dx.doi.org/10.1080/0952813X.2013.784812 },
+     eprint = {http://dx.doi.org/10.1080/0952813X.2013.784812}
+}
+
