allow group1.tex back into the party

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -1,41 +1,43 @@
-\title{Case study \#1: Ethical requirements for recomputation}
-\author{
-	Benjamin M. Gorman \\
-               School of Computing,
-        University of Dundee\\
-        Dundee DD1 4HN, \underline{Scotland}\\
-	b.gorman@dundee.ac.uk\\
-	\and\\
-	Luke Hutton \\
-		School of Computer Science,
-		University of St Andrews\\
-		St Andrews KY16 9SX, \underline{Scotland}\\
-	lh49@st-andrews.ac.uk	
-	\and\\
-        Karen Petrie \\
-               School of Computing,
-        	      University of Dundee\\
-        Dundee DD1 4HN, \underline{Scotland}\\
-        kpetrie@dundee.ac.uk 
-       %add yourself here! 
-}
-\date{\today}
+% \title{Case study \#1: Ethical requirements for recomputation}
+% \author{
+% 	Benjamin M. Gorman \\
+%                School of Computing,
+%         University of Dundee\\
+%         Dundee DD1 4HN, \underline{Scotland}\\
+% 	b.gorman@dundee.ac.uk\\
+% 	\and\\
+% 	Luke Hutton \\
+% 		School of Computer Science,
+% 		University of St Andrews\\
+% 		St Andrews KY16 9SX, \underline{Scotland}\\
+% 	lh49@st-andrews.ac.uk	
+% 	\and\\
+%         Karen Petrie \\
+%                School of Computing,
+%         	      University of Dundee\\
+%         Dundee DD1 4HN, \underline{Scotland}\\
+%         kpetrie@dundee.ac.uk 
+%        %add yourself here! 
+% }
+% \date{\today}
 
-\documentclass[12pt]{article}
+% \documentclass[12pt]{article}
 
-\begin{document}
-\maketitle
+% \begin{document}
+% \maketitle
 
-\section{Introduction}
+\section{Case study \#1: Ethical requirements for recomputation}
+
+\subsection{Introduction}
 The goal of recomputation\footnote{http://www.recomputation.org/} is to follow the recompilation manifesto\footnote{http://www.recomputation.org/blog/2013/04/12/the-recomputation-manifesto/} and make computational experiments recomputable by providing tools and a repository to store experiments in. The mission is stated as:
 \begin{quote}
 ``If we can compute your experiment now, anyone can recompute it 20 years from now''
 \end{quote}
 
 One of the considerations perhaps under considered in regards to recomputation to date is the ethical implications. 
-\section{Background}
+\subsection{Background}
 
-\section{Comparison of Ethical Requirements across Universities}
+\subsection{Comparison of Ethical Requirements across Universities}
 
 Through examination of ethics submissions from ten institutions across the UK, EU, and US,
 we aim to discover a set of ethical concerns common to all. 
@@ -56,10 +58,7 @@ ethics approval process is to ensure participant agency is preserved through the
 % what are the outliers - are they important?
 
 
-\section{Comparison of Ethical Requirements across Publishers}
+\subsection{Comparison of Ethical Requirements across Publishers}
 
-\section{Framework for Ethics to accompany data and experiments}
+\subsection{Framework for Ethics to accompany data and experiments}
 
-\section{Conclusion}
-
-\end{document}
