Bring in group 2's text.
We use sweave, just to be difficult.

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -84,3 +84,17 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   journal={arXiv preprint arXiv:1310.1905},
   year={2013}
 }
+
+@article{kotthoff,
+     author = {Kotthoff, Lars},
+     title = {Reliability of computational experiments on virtualised hardware},
+     journal = {Journal of Experimental \& Theoretical Artificial Intelligence},
+     volume = {26},
+     number = {1},
+     pages = {33-49},
+     year = {2014},
+     doi = {10.1080/0952813X.2013.784812},
+     URL = {http://dx.doi.org/10.1080/0952813X.2013.784812 },
+     eprint = {http://dx.doi.org/10.1080/0952813X.2013.784812}
+}
+
