--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -1,8 +1,9 @@
 \section*{Acknowledgements}
 \label{s:ack}
 
-The authors of this paper are very grateful to 
-the various organisers and participants of the Summer School are extremely grateful to all those 
+The authors of this paper include organisers and participants in the
+summer school. We are very grateful to all of the people who helped
+make the school a success.
 
 First we thank the organisers: John McDermott, Angela Miguel, and Lakshitha de Silva for organisational and technical help.
 
@@ -10,7 +11,8 @@ We thank the various sponsors of the Summer School  for financial and other form
 These were: SICSA (the Scottish Informatics and Computer Science Alliance); 
 Microsoft Azure; the Software Sustainability Institute; 
 the School of Computer Science at the University of St Andrews; 
-and the EPSRC Impact Acceleration Award ``Recomputation.org: Making Computational Experiments Recomputable"
+and the EPSRC Impact Acceleration Award ``Recomputation.org: Making
+Computational Experiments Recomputable''
 at the University of St Andrews.
 
 We are also grateful to speakers at the Summer School who were not also authors of this paper: 
