--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -1,4 +1,10 @@
 \section*{Acknowledgements}
 \label{s:ack}
 
-Thank SICSA/SSI/Microsoft Research/EPSRC/St Andrews Comp Science/speakers/participants!
+It is our pleasure to thank Scottish Informatics and Computer Science Alliance (SICSA), 
+the Software Sustainability Institute (SSI) and Microsoft Research for the support of the 
+EMCSR 2014 Summer school; School of Computer Science of the University of St Andrews
+for providing the venue and technical support; EPSRC for supporting the Recomputation.org
+project. We would like also to thank all attendees and speakers at the summer school (even
+though it's not common to acknowledge co-authors of the paper, which include all of them).
+
