--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -3,14 +3,13 @@
 
 This paper has been written during the week of the Summer School
 on Experimental Methodology in Computational Science Research
-(University of St Andrews, Scotland, August 4-8, 2014,
-https://blogs.cs.st-andrews.ac.uk/emcsr2014/). The 
+\footnote{St Andrews, Scotland, August 4-8, 2014,
+\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}}. The 
 school was comprising of lectures, tutorials and a hackday,
 all united by the topic of reproducible research in computational
 sciences. 
 
-The programme included:
-
+The programme included the following lectures and tutorials:
 \begin{itemize}
    \item Steve Crouch (Software Sustainability Institute): Developing Sustainable Research Software -- why is it important and what resources are out there?
    \item Ian Gent (St Andrews): Reproducibility in Computer Science
