Mentioned my Azure tutorial.

--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -18,7 +18,11 @@ computational research\footnote{e.g., the various projects at
 \url{http://azure4research.com/}}. As more and more research projects
 involve the use of virtual machines running on cloud infrastructure,
 it might perhaps be possible to leverage this for creating
-reproducible experiments by sharing these virtual machines.
+reproducible experiments by sharing these virtual machines. After that,
+Alexander Konovalov from St Andrews gave a tutorial on creating
+virtual machines in Microsoft Azure (6-month passes to access the
+latter were provided freely to all participants thanks to Microsoft Research's
+generosity).
 
 Two members of the Software Sustainability
 Institute\footnote{\url{http://www.software.ac.uk/}}, Neil Chue Hong
