Added brief state of background

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -37,17 +37,23 @@ The goal of recomputation\footnote{http://www.recomputation.org/} is to follow t
 One of the considerations perhaps under considered in regards to recomputation to date is the ethical implications. 
 \subsection{Background}
 
+Due to the nature of an HCI experiment, in that it involves gathering data from human participants, it is necessary in order to successfully replicate an HCI experiment you must gather a new set of participants of which must meet the original experiments inclusion and exclusion criteria. In order for this to occur it is also necessary to replicate the ethical approval which the original experimenter sought, at first this may seem trivial however through examination of ethical approval submissions from ten institutions across the UK, EU, and US we found great differences between each and that a very low amount of overlap currently exists.
+
 \subsection{Comparison of Ethical Requirements across Universities}
 
-Through examination of ethics submissions from ten institutions across the UK, EU, and US,
-we aim to discover a set of ethical concerns common to all. 
-Our analysis uncovered 182 unique fields, 
-encompassing generic details, such as contact details of co-investigators, methodological
-details, and institution-specific requirements, often for insurance and liability purposes.
-Of these fields, only two were common to all ten ethics forms - the name of the principal
-investigator, and whether informed consent was sought. While this is clearly insufficient
-as a minimum specification for capturing ethics requirements, it reveals the crux of the 
-ethics approval process is to ensure participant agency is preserved through the experimental process.
+% Gaterhing forms
+
+Why did we select each institition?
+
+% Comment on openess
+
+% Gathering of unique fields
+
+In order to compare each ethical approval form from each instituion, we manually transcribed each field and noted unique occurances. Minor changes in wording were ignored(?). However, expansions and additional questions were counted as unique fields. Our analysis uncovered 182 unique fields, encompassing generic details, such as contact details of co-investigators, methodological details, and institution-specific requirements, often for insurance and liability purposes. Of these fields, only two were common to all ten ethics forms - the name of the principal investigator, and whether informed consent was sought. While this is clearly an insufficient  minimum specification for capturing ethics requirements, it reveals the crux of the ethics approval process is to ensure participant agency is preserved through the experimental process.
+
+
+
+
 
 % which fields occur frequently
 
