add scripts for analysing ethics stuff

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -41,13 +41,15 @@ One of the considerations perhaps under considered in regards to recomputation t
 
 Through examination of ethics submissions from ten institutions across the UK, EU, and US,
 we aim to discover a set of ethical concerns common to all. 
-Our analysis uncovered 182 unique fields, 
+Our analysis uncovered 145 unique fields, 
 encompassing generic details, such as contact details of co-investigators, methodological
 details, and institution-specific requirements, often for insurance and liability purposes.
 Of these fields, only two were common to all ten ethics forms - the name of the principal
 investigator, and whether informed consent was sought. While this is clearly insufficient
 as a minimum specification for capturing ethics requirements, it reveals the crux of the 
-ethics approval process is to ensure participant agency is preserved through the experimental process.
+ethics approval process is to ensure participant agency is maintained through the experimental process by mandating informed consent.
+
+Examining the frequency with which these fields occur highlights the 
 
 % which fields occur frequently
 
