Updated sub sub sections

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -41,15 +41,20 @@ Due to the nature of an HCI experiment, in that it involves gathering data from 
 
 \subsection{Comparison of Ethical Requirements across Universities}
 
-% Gaterhing forms
+\subsubsection{Gathering academic forms}
 
-Why did we select each institition?
+% Why did we select each institition?
 
-% Comment on openess
+% Comment on openess? And that only open forms can be found/transcribed
 
 % Gathering of unique fields
 
 In order to compare each ethical approval form from each instituion, we manually transcribed each field and noted unique occurances. Minor changes in wording were ignored(?). However, expansions and additional questions were counted as unique fields. Our analysis uncovered 182 unique fields, encompassing generic details, such as contact details of co-investigators, methodological details, and institution-specific requirements, often for insurance and liability purposes. Of these fields, only two were common to all ten ethics forms - the name of the principal investigator, and whether informed consent was sought. While this is clearly an insufficient  minimum specification for capturing ethics requirements, it reveals the crux of the ethics approval process is to ensure participant agency is preserved through the experimental process.
+
+\subsubsection{Comparison Analysis}
+
+% comment on how we compared each paper and a report of the comparison
+
 
 
 
