add beautiful ethics distribution plot

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -39,6 +39,11 @@ One of the considerations perhaps under considered in regards to recomputation t
 
 Due to the nature of an HCI experiment, in that it involves gathering data from human participants, it is necessary in order to successfully replicate an HCI experiment you must gather a new set of participants of which must meet the original experiments inclusion and exclusion criteria. In order for this to occur it is also necessary to replicate the ethical approval which the original experimenter sought, at first this may seem trivial however through examination of ethical approval submissions from ten institutions across the UK, EU, and US we found great differences between each and that a very low amount of overlap currently exists.
 
+\begin{figure}
+    \centerline{\resizebox{1\linewidth}{!}{\includegraphics{plot-fieldfreq.eps}}}
+    \caption{Histogram showing frequency distribution of fields in ethics applications}
+\end{figure}
+
 \subsection{Comparison of Ethical Requirements across Universities}
 
 Through examination of ethics submissions from ten institutions across the UK, EU, and US,
