--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -3,7 +3,7 @@
 
 The focus of this section is on the issues relevant to research reproducibility that are potentially unique to non-CS computational research.
 The discussion is based on experience gained while packaging three computational experiments into self-contained virtual-machines.
-The papers on which the discussion is based (\cite{danielpaper}, \cite{bareford2010nanoflare}, \cite{arabas2013libcloud}) deal with urban planning, solar physics, and atmospheric physics respectively, although the discussion is likely relevant to other non-CS domains.
+The papers on which the discussion is based (i.e., \cite{danielpaper,bareford2010nanoflare,arabas2013libcloud}) deal with urban planning, solar physics, and atmospheric physics respectively, although the discussion is likely relevant to other non-CS domains.
 Our aim was to offer readers (or reviewers) the opportunity to reproduce the figures presented in the paper, to inspect the code, and to possibly test behaviour of the programs with other parameters, all within a ready-to-use environment, namely a single virtual box constructed using the Vagrant tool and which runs the Debian operating system.
 
 %** LEGAL **
@@ -17,7 +17,7 @@ Even if the legal status of the code developed for a given experiment is settled
 This in fact was also the case in one of the programs in question, as the code relied on proprietary software library.
 
 Furthermore, we noted a lack of domain-specific workflows for recomputation in non-CS journals.
-A counterexample is the journal Geoscientific Model Developments (GMD), which encourages reviewers to check the code.\footnote{DOI: 10.5194/gmd-6-1233-2013 }
+A counterexample is the journal Geoscientific Model Development (GMD), which encourages reviewers to check the code.\footnote{DOI: 10.5194/gmd-6-1233-2013 }
 The level of computer proficiency in non-CS domains\footnote{For example, see: ``\emph{Computational science: ...Error. Why scientific programming does not compute}''. DOI:10.1038/467775a.} is also likely to influence the ability of researchers to use the Virtual Machines --- it is arguably less likely that a physics or urban-planning journal reviewer will know right away how to deal with a VM, in contrast to CS-related journals.
 
 We give a more detailed description of the experiments in the remainder of this section.
@@ -30,9 +30,9 @@ The resulting virtual machine is about 550MB - the Java SDK and its dependencies
 We encountered legal obstacles in the following three areas.
 \begin{itemize} 
 \item Code-related: the software was developed as part of the EU project QUANTICOL, which is funded by the European Commission as part of its 7th Framework programme. In the General Conditions part of the project's grant agreement it is stated that the IP rights are awarded to the beneficiary, which in this case would be the University of Edinburgh. In turn, the University of Edinburgh has issued a position statement on intellectual property rights\footnote{http://www.research-innovation.ed.ac.uk/Portals/0/Documents/University-of-Edinburgh-Position-Statement-on-Intellectual-Property\_December2011.pdf} in which it stated that ``\emph{It is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
-\item Library-related: the package SSJ is released under the GPL licence from GNU.
-\item Data-related: we code uses a dataset based on bus location measurements provided to us by Lothian Buses. We would need their permission to put this dataset in the public domain.
+\item Data-related: the code uses a dataset based on bus location measurements provided to us by Lothian Buses. We would need their permission to put this dataset in the public domain.
 \end{itemize}
+The use of the SSJ package is not an obstacle because it is released under the GPL licence from GNU.
 The resulting virtual machine contains the Java source files, allowing researchers with knowledge of Java to analyse the correctness of the programme. However, the code is not documented and may be hard to read. Specifically, parameters are hard-coded and no interpretation is given of the resulting numbers and LaTeX code.
 
 \subsection*{Experiment 2: Solar Physics}
@@ -75,6 +75,7 @@ is likely to be resolved.
 
 \subsection*{Experiment 3: Atmospheric Physics}
 
-We also attempted to use the virtual machine run code that uses libcloudph++ \cite{arabas2013libcloud}, a library of algorithms
-for representing cloud microphysics in numerical models. We succeeded in running several pieces of software that were used to create figures used in \cite{arabas2013libcloud}. The software is already under a GPL and in a Github repository. The libraries necessary to run the software are a C++ compiler, CMake, and the Boost and Thrust libraries.
-A legal obstacle was encountered; specifically, the libraries optionally use the GPU using non-free-software (CUDA) to make it run faster. In this case the workaround was feasible as the GNU Scientific Library offered analogous functionality. otherwise, the only complication was getting the right software versions on the VM, otherwise all was feasible.
+We also attempted to use the virtual machine to run code that uses libcloudph++ \cite{arabas2013libcloud}, a library of algorithms
+for representing cloud microphysics using numerical models. The library allows one to simulate formation of clouds and precipitation, for instance within a fluid-dynamics simulation of an atmospheric flow. We succeeded in running several pieces of software that were used to create figures used in \cite{arabas2013libcloud}. The software is already under a GPL and in a Github repository. The libraries needed to run the software are a C++ compiler, CMake, and the Boost and Thrust libraries.
+
+Two legal obstacles were encountered. For one, the libraries optionally use the GPU using non-free-software (CUDA) to make it run faster. Additionally, the employed particle-based algorithm is inspired by a technique covered by several patents including a European one (EP1847939A2). As for potential technical obstacles, the only complication was getting the right software versions on the VM, otherwise all was feasible.
