updated bib : removed the second chord paper Added source code of P2P experiments Wrote a bit about p2p stuff

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -22,18 +22,8 @@
 @url{azure,
 	Howpublished = {\url{https://azure.microsoft.com/en-us/}},
 	Title = {{Microsoft Azure}}}
-  
-@inproceedings{chord1,
-  Author = {Dabek, Frank and Brunskill, Emma and Kaashoek, M. Frans and Karger, David R. and Morris, Robert and Stoica, Ion and Balakrishnan, Hari},
-booktitle={Proceedings of the Eighth Workshop on Hot Topics in Operating Systems},
-title={Building peer-to-peer systems with {Chord}, a distributed lookup service}, 
-year={2001}, 
-month=may,
-pages={81--86}, 
-keywords={file organisation;file servers;Chord distributed lookup service;decentralized network;peer-to-peer file sharing system;peer-to-peer systems;Authentication;Computer science;Costs;Internet;Laboratories;Network servers;Peer to peer computing;Robustness;Routing;Scalability}, 
-doi={10.1109/HOTOS.2001.990065},}
-  
-@inproceedings{chord2,
+
+@inproceedings{chord,
 author = {Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M. Frans and Balakrishnan, Hari},
  title = {Chord: A Scalable Peer-to-peer Lookup Service for Internet Applications},
  booktitle = {Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications},
