Minimally complete parahraph on discussion with promise what next.

--- a/SummerSchoolPaper/discussion.tex
+++ b/SummerSchoolPaper/discussion.tex
@@ -1,7 +1,8 @@
 \section{Discussion}
 \label{s:discussion}
 
-What have we learned? What recommendations can we make? What next?
-
-After presenting the case studies, in this section we could give a table indicating
-which obstacles we have met in which case studies.
+After presenting the case studies, in this section we are going to summarise 
+obstacles that we have met in which case studies. In the final version of the 
+paper we are going to describe lessons learned, suggest recommendations 
+that could be made from it, and outline possible further directions of addressing 
+the issues that we've identified.
