--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -11,7 +11,9 @@ with materials such as ethics forms and experimental results put into the reposi
 might be half a gigabyte, and such large files can be problematic for git.  This is one reason these are not included directly in the repository.
 
 Finally, by ``Executable'', we mean a paper that can be reconstructed from source 
-materials.\footnote{(The name ``reproducible paper'' is sometimes used for this, but can lead to confusion because a paper can be executable in the sense of being able to produce new figures with 
+materials, and that data can be reanalysed as it changes and new versions of the paper produced, and possibly executable code rerun.  
+This has numerous advantages because as we add data, the paper does not need to be rewritten. 
+\footnote{(The name ``reproducible paper'' is sometimes used for this, but can lead to confusion because a paper can be executable in the sense of being able to produce new figures with 
 changed data, but not reproducible if that data can not be reconstructed ab initio.}
 
 
