Converted section 2 into more readable text.

--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -1,13 +1,13 @@
 \section{The state of the art}
 \label{s:recomputation}
 
-Describe the current state of reproducible computational science, and
-in particular recomputation.org.
-\cite{gent:recomputation}
-
-* Recomputation manifesto
-
-* Github, Figshare and Mozilla Science Labs initiative (assigning DOI to the code)
-
-* Training efforts like Software Carpentry addressing to various extents the "Recompuliteracy" issue
+In this section we are going to describe the current state of reproducible computational science, and
+in particular the Recomputation.org project, which is aimed at implementing
+the infrastructure for recomputable experiments following the statements of the Recomputation
+Manifesto \cite{gent:recomputation}. We will give an overview of other activities in this
+direction, such as, for example, the Mozilla Science Lab, GitHub and Figshare joint project to fix code
+citations by assigning a DOI to the particular revision, and training initiatives such as Software
+Carpentry to increase the awareness of researchers about tools that they can use to make their
+research more reproducible -- in other words, promote ``Recomputeliteracy'' (the word coined by 
+Ian Gent at one of the group discussions at the Collaborations Workshop 2014).
 
