--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -1,47 +1,23 @@
 \section{Obstacles to Reproducibility in Computational Sciences}
 \label{s:obstacles}
 
-There are many obstacles to reproducibility.   Several of these were discussed by various speakers during the week.  They were also discussed by the participants.
+There are various obstacles to reproducibility, and many of these were discussed by speakers and participants during the week. 
+Although not intended to be an exhaustive list,  amongst the obstacles and challenges that we identified are:
+technical (long-term persistence of experiments; amount of efforts required from researchers to create reproducible experiments, 
+which varies very much for different areas), 
+legal and ethical (licensing issues; data protection issues, e.g. with researcher's personal data drifting into the virtual machine 
+while it is in use), 
+community building (why to make your research reproducible and how to to motivate your colleagues/collaborators/supervisors/etc 
+to think the same). 
 
-Amongst the obstances and challenges that we identified are the following (although not intended to be an exhaustive list.) 
-
-\begin{itemize}
-\item Technical:
- \begin{itemize}
-  \item Long-term persistence
-  \item In some areas it's harder to create reproducible experiments than in others
-\end{itemize}
-
-\item
-Legal and ethical:
-
-\begin{itemize}
-  \item Data protection issues: personal data drifting into VMs
-  \item Licensing issues
-  \end{itemize}
-  
-
-\item
-Community building:
-
-\begin{itemize}
-\item
-  why to make your research reproducible
-  \item how to motivate your colleagues/collaborators/supervisors/etc
-  \end{itemize}
-\item From Discussion
-\begin{itemize} 
-
-\item Performance measurement
-\item ability to get ethical consent.  Did they ask to release the data in a form we can use?
-\item how much knowledge is needed to rerun an experiment
-\item Ease of reproduction vs independent reproducibility
-\item Automation tradeoff - recomputation tends to need automated systems
-\item You don't know what data was decided not to publish in the paper 
-  \end{itemize}
-
-  
-\end{itemize}
+Other problems that came out from the discussions include:
+performance measurement; 
+possibly non-trivial amount of knowledge that is still needed to rerun an experiment;
+ease of reproduction vs independent reproducibility; 
+automation tradeoff (recomputation tends to need automated systems);
+ability to get ethical consent (did they ask to release the data in a form we can use?); 
+not knowing what data was decided not to 
+publish in the paper.
 
 
 
