--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -18,7 +18,7 @@ the publication of a replication.
 
 After forming teams and selecting projects for the hackday, three
 topics for the case studies were selected. These will be presented below
-in Sections~\ref{s:group1}--~\ref{s:group3}.
+in Sections~\ref{s:group1}~--~\ref{s:group3}.
 
 
 
