--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -5,19 +5,26 @@ This paper has been written during the week of the Summer School
 on Experimental Methodology in Computational Science Research
 \footnote{St Andrews, Scotland, August 4-8, 2014,
 \url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}}. The 
-school was comprising of lectures, tutorials and a hackday,
+school was comprising of lectures, tutorials and a hackathon,
 all united by the topic of reproducible research in computational
 sciences. 
 
-For the hackday (actually split into several sessions), attendees 
+One goal of the Summer School was to write a paper about reproducible research in
+Computational Sciences \emph{by the end of the week}, and this is what you are reading now.
+The hackathon aspect of the Summer School therefore became focussed on working on this paper
+and then writing it. 
+
+For the hackathon (actually split into several sessions), attendees 
 were asked to `bring a paper', i.e. to bring the suggestion of a 
 computational experiment to be reproduced as part of the summer school. 
 The experiment should be either from a published paper or, if unpublished, 
 have the agreement of all authors concerned for this activity including 
-the publication of a replication. 
+the publication of a replication.  
 
-After forming teams and selecting projects for the hackday, three
-topics for the case studies were selected. These will be presented below
+Following participants' presentations of their 
+selected papers, we decided that they fell naturally into three topics, 
+and three groups were performed to work on these topics as case studies.
+The resulting case studies will be presented below
 in Sections~\ref{s:group1}~--~\ref{s:group3}.
 
 
