--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -8,6 +8,8 @@ Manifesto \cite{gent:recomputation}. We will give an overview of other activitie
 direction, such as, for example, the Mozilla Science Lab, GitHub and Figshare joint project to fix code
 citations by assigning a DOI to the particular revision, and training initiatives such as Software
 Carpentry to increase the awareness of researchers about tools that they can use to make their
-research more reproducible -- in other words, promote ``Recomputeliteracy'' (the word coined by 
+research more reproducible -- in other words, promote ``Recomputaliteracy'' (a word coined by 
 Ian Gent at one of the group discussions at the Collaborations Workshop 2014).
+
+\emph{This section is in a preliminary state}
 
